Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/6863465/T6863465b.out
T6863465b.java:11:12: compiler.err.cyclic.inheritance: T6863465b.c
1 error
